# fastts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/fastai_transformers/: __init__.py
src/fastai_transformers/transforms/: block.py  decoder.py  tokenizer.py
src/fastai_ttc/callbacks/: logits.py  loss.py  model.py  targets.py
src/fastai_ttc/callbacks/models/: distilbert.py
src/fastai_ttc/transforms/: block.py  decode.py  decoder.py  encode.py  tokenizer.py  types.py
src/fastts/callbacks/: loss.py  model.py  targets.py
src/fastts/callbacks/classification/: sequence.py
src/fastts/learner/: splitter.py
src/fastts/model/: freeze.py
src/fastts/transforms/: block.py  decode.py  encode.py
src/fastts/types/: textbatch.py
tests/: conftest.py
tests/e2e/: test_freeze.py  test_learn.py
tests/integration/: test_callbacks.py  test_transforms.py
tests/unit/callbacks/: test_logits.py  test_loss.py  test_model.py  test_targets.py
tests/unit/callbacks/classification/: test_sequence.py
tests/unit/callbacks/models/: test_distilbert.py
tests/unit/model/: test_freeze.py
tests/utils/: learner.py
