[project]
name = "fastai-transformers"
version = "0.1.0"
description = "Text classification via fastai and transformers"
readme = "README.md"
authors = [
    { name = "Kai Krings", email = "kai.krings@posteo.de" }
]
requires-python = ">=3.10"
dependencies = [
    "fastai>=2.7.18",
    "transformers>=4.48.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

[tool.uv]
cache-dir = ".cache/uv"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
cache_dir = ".cache/mypy"
strict = true
